--- a/app/build.gradle
+++ b/app/build.gradle
@@ -51,8 +51,10 @@ dependencies {
     implementation 'com.google.firebase:firebase-database:19.2.1'
     // https://firebase.google.com/docs/android/setup#available-libraries
 
+
     // testing dependencies
     testImplementation 'junit:junit:4.12'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.0'
     // Optional -- Robolectric environment
     testImplementation 'androidx.test:core:1.0.0'
     // Optional -- Mockito framework
